# car-data-logger

./: .gitignore  README.md  cdl-system.pro  common-config.pri
DataStore/: CMakeLists.txt  DataStoreManager.pc.in  DataStoreManager.pro  README.md
DataStore/src/: commonlogheader.h  src.pri  storemanager.cpp  storemanager.h
DataStore/src/Configuration/: configuration.cpp  configuration.h  configuration.pri
DataStore/src/DataStoreHandler/: datastoreJSONhandler.cpp  datastoreJSONhandler.h  datastorehandler.pri
DataStore/src/FileManager/: fileinfodbhandler.cpp  fileinfodbhandler.h  fileinfodbquerygenerator.cpp  filemanager.cpp  filemanager.h  filemanager.pri
DataStore/src/StorageManager/: storagemanager.cpp  storagemanager.pri
DataStore/test/DataStoreTestApp/: .gitignore  DataStoreTestApp.pro  main.cpp  store_config_file.json  vehicledatagenerator.cpp  vehicledatagenerator.h
OnBoardProvider/: CMakeLists.txt  OnBoardProvider.pc.in  README.md
OnBoardProvider/config/: commonapi.ini
OnBoardProvider/interface/: .project
OnBoardProvider/interface/src-gen/v1/org/genivi/CDL/: ClientAPIDBusProxy.cpp  ClientAPIDBusProxy.hpp  ClientAPIDBusStubAdapter.cpp  ClientAPIDBusStubAdapter.hpp  ClientAPISomeIPProxy.cpp  ClientAPISomeIPStubAdapter.cpp  ClientAPISomeIPStubAdapter.hpp  ClientAPIStub.hpp  ClientAPIStubDefault.cpp
OnBoardProvider/src/: onboardprovider.cpp  onboardprovider.h
OnBoardProvider/src/DataManager/: datamanager.cpp  datamanager.h
OnBoardProvider/src/OnBoardProviderService/: onboardproviderdbusservice.cpp  onboardproviderdbusservice.h  onboardproviderservice.cpp  onboardproviderservice.h  onboardprovidersomeipservice.cpp  onboardprovidersomeipservice.h
OnBoardProvider/src/libCDLClientSomeIp/: CMakeLists.txt
OnBoardProvider/test/DBusClientTestApp1/: DBusClientTestApp1.pro  dbusclienttestapp1.cpp  dbusclienttestapp1.h  main.cpp
OnBoardProvider/test/DBusClientTestApp2/: DBusClientTestApp2.pro  dbusclienttestapp2.cpp  dbusclienttestapp2.h  main.cpp
OnBoardProvider/test/OnBoardProviderTestApp/: OnBoardProviderTestApp.pro  datagenerator.cpp  datagenerator.h  main.cpp
VSSDataCollector/: .gitignore  CMakeLists.txt  README.md  VSSDataCollector.pc.in  VSSDataCollector.pro  add-make-install.patch  add-package-config-file.patch
VSSDataCollector/src/: commonlogheader.h  src.pri  vssdatacollector.cpp  vssdatacollector.h
VSSDataCollector/src/DataConfigService/: dataconfigparser.cpp  dataconfigparser.h  dataconfigservice.pri
VSSDataCollector/src/VSIWatcher/: cycledatatimer.cpp  cycledatatimer.h  vsiwatcher.cpp  vsiwatcher.h  vsiwatcher.pri
VSSDataCollector/src/VssJsonService/: nametoidconvertor.cpp  nametoidconvertor.h  vssitem.cpp  vssitem.h  vssitemmanager.cpp  vssitemmanager.h  vssjsonparser.cpp  vssjsonparser.h  vssjsonservice.pri
VSSDataCollector/test/: test.pro
VSSDataCollector/test/DataGenerator/: DataGenerator.pro  datagenerator.cpp  datagenerator.h  main.cpp
VSSDataCollector/test/VSSCollectorTestApp/: DataConfig.json  VSSCollectorTestApp.pro  main.cpp  vss_rel_1.json  vss_rel_1.vsi
cdl_daemon/: CMakeLists.txt  README.md  cdl_daemon.cpp  cdl_daemon.hpp  main.cpp
cdl_daemon/common/: log.cpp
cdl_daemon/common/client_authentication/: client_authentication_decryption_handler.cpp  client_authentication_decryption_handler.hpp  client_authentication_encryption_handler.cpp  client_authentication_encryption_handler.hpp
cdl_daemon/common/data_encryption/: data_decryption_handler.hpp  data_encryption_handler.hpp
cdl_daemon/config/: vsomeip-onboard-provider.json
cdl_daemon/configuration_files/: data_config.json  rvi_call.py  store_config_file.json  vss_rel_1.json  vss_rel_1.vsi
cdl_daemon/data_store/: CMakeLists.txt  data_store_manager.pc.in
cdl_daemon/data_store/src/: store_manager.cpp  store_manager.hpp
cdl_daemon/data_store/src/configuration/: configuration.cpp  configuration.hpp
cdl_daemon/data_store/src/data_store_handler/: data_store_json_handler.cpp  data_store_json_handler.hpp
cdl_daemon/data_store/src/file_manager/: file_info_db_handler.cpp  file_info_db_handler.hpp  file_info_db_query_generator.cpp  file_info_db_query_generator.hpp  file_manager.cpp  file_manager.hpp
cdl_daemon/data_store/src/storage_manager/: storage_manager.cpp  storage_manager.hpp
cdl_daemon/off_board_provider/: CMakeLists.txt  off_board_provider.pc.in
cdl_daemon/off_board_provider/src/: off_board_provider.cpp  off_board_provider.hpp
cdl_daemon/off_board_provider/src/rvi_client/: rvi_client.cpp  rvi_client.hpp
cdl_daemon/off_board_provider/src/rvi_data_manager/: base64_handler.hpp  rvi_data_manager.cpp  rvi_data_manager.hpp
cdl_daemon/on_board_provider/: CMakeLists.txt  on_board_provider.pc.in
cdl_daemon/on_board_provider/interface/: CDLClientAPI.fdepl  CDLClientAPI.fidl
cdl_daemon/on_board_provider/interface/src-gen/v1/org/genivi/CDL/: ClientAPI.hpp  ClientAPIDBusDeployment.cpp  ClientAPIDBusDeployment.hpp  ClientAPIInstanceIds.hpp  (+11 more)
cdl_daemon/on_board_provider/src/: on_board_provider.cpp  on_board_provider.hpp
cdl_daemon/on_board_provider/src/data_manager/: data_manager.cpp  data_manager.hpp
cdl_daemon/on_board_provider/src/libCDLClientSomeIp/: CMakeLists.txt
cdl_daemon/on_board_provider/src/on_board_provider_service/: on_board_provider_dbus_service.cpp  on_board_provider_dbus_service.hpp  on_board_provider_service.cpp  on_board_provider_service.hpp  on_board_provider_someip_service.cpp  on_board_provider_someip_service.hpp
cdl_daemon/vss_data_collector/: CMakeLists.txt  vss_data_collector.pc.in
cdl_daemon/vss_data_collector/src/: vss_data_collector.cpp  vss_data_collector.hpp
cdl_daemon/vss_data_collector/src/data_config_service/: data_config_parser.cpp  data_config_parser.hpp
cdl_daemon/vss_data_collector/src/vsi_watcher/: cycle_data_timer.cpp  cycle_data_timer.hpp  vsi_watcher.cpp  vsi_watcher.hpp
cdl_daemon/vss_data_collector/src/vss_json_service/: name_to_id_convertor.cpp  name_to_id_convertor.hpp  vss_item.cpp  vss_item.hpp  vss_item_manager.cpp  vss_item_manager.hpp  vss_json_parser.cpp  vss_json_parser.hpp
(+479 files in other folders)
